# Calibration-Tool

./: CMakeLists.txt  CalibrationTool.pro  calgraphicsview.cpp  calgraphicsview.h  connectedcomponent.cpp  connectedcomponent.h  hsvminmax.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  touchylabel.cpp  touchylabel.h
